# anyrun

nix/: default.nix
nix/plugins/: default.nix
plugins/applications/src/: lib.rs
plugins/randr/: Cargo.toml
plugins/translate/: Cargo.toml
