[package]
name = "randr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11.1"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", rev = "4dce27cd6a4aa903d3976260efbc8fbb36ec7377" }
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
